# kittytype-backend

./: .gitignore  pyproject.toml
app/: main.py
app/core/: settings.py
app/crud/: game.py  text.py  user.py
app/models/: game.py  performance_log.py  text.py  user.py
app/routers/v1/: api.py
app/utils/: helpers.py  security.py
